--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,5 +17,21 @@
             <a href="#" class="text-white hover:underline">Logout</a>
         </div>
     </nav>
+
+    <br><br>
+    <!-- Main -->
+     <div class="flex-grow container mx-auto mt-10 px-4 sm:px-0">
+        <div class="max-w-3xl mx-auto bg-white p-6 rounded-lg">
+
+            <!-- Introduction Section -->
+            <div class="text-center">
+                <h2 class="text-2xl font-semibold mb-4">Welcome to AI Blog Generator</h2>
+                <p class="text-gray-700">
+                    Generate high-quality blog articles from YouTube videos using artificial intelligence.
+                    Simply enter the link to the YouTube video below and let the AI create the content for you!
+                </p>
+            </div>
+        </div>
+     </div>
 </body>
 </html>
