--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,7 @@
     <br><br>
     <!-- Main -->
      <div class="flex-grow container mx-auto mt-10 px-4 sm:px-0">
-        <div class="max-w-3xl mx-auto bg-white p-6 rounded-lg">
+        <div class="max-w-3xl mx-auto bg-white p-6 rounded-lg shadow-md transition-transform transform hover:scale-105 flex flex-col">
 
             <!-- Introduction Section -->
             <div class="text-center">
@@ -30,6 +30,17 @@
                     Generate high-quality blog articles from YouTube videos using artificial intelligence.
                     Simply enter the link to the YouTube video below and let the AI create the content for you!
                 </p>
+            </div>
+
+            <br>
+
+            <!-- Youtube section -->
+            <div>
+                <h2 class="'text-xl mb-4 font-semibold">Enter Youtube Link</h2>
+                <div class="flex space-x-4">
+                    <input id="youtubeLink" type="'url" placeholder="Paste Youtube Link..." class="flex-grow p-2 border border-blue-400 rounded-l-md">
+                    <button id="generateBlogButton" class="bg-blue-600 text-white px-4 py-2 rounded-r-md hover:bg-blue-700 transition-colors" >Generate</button>
+                </div>
             </div>
         </div>
      </div>
