Create a section to display the blog generated after user clicks the Generate button

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="flex flex-col min-h-screen bg-gray-100 font-sans antialised">
     <!-- Navbar -->
-    <nav class="bg-blue-600 p-4 text-white flex justify">
+    <nav class="bg-blue-600 p-4 text-white flex justify-between">
         <div>
             <h1 class="text-3xl font-bold">AI Blog Generator</h1>
         </div>
@@ -42,7 +42,25 @@
                     <button id="generateBlogButton" class="bg-blue-600 text-white px-4 py-2 rounded-r-md hover:bg-blue-700 transition-colors" >Generate</button>
                 </div>
             </div>
+
+            <!-- Section for loading circle -->
+
+            <!-- Generated Blog Display Section -->
+            <section class="mt-10 flex-grow">
+                <h2 class="text-xl mb-4 font-semibold">Generated Blog Article</h2>
+                <div id="blogContent" class="mt-2 text-gray-700 space-y-4">
+                    
+                </div>
+            </section>
         </div>
      </div>
+
+     <footer class="text-center p-4 text-black mt-6">
+        By Nitish Chawla
+     </footer>
+
+     <script>
+
+     </script>
 </body>
 </html>
