--- a/frontend/login.html
+++ b/frontend/login.html
@@ -16,5 +16,26 @@
             <a href="#" class="text-white hover:underline">Logout</a>
         </div>
     </nav> 
+
+    <!-- Main content -->
+    <div class="flex items-center justify-center h-screen">
+        <div class="bg-white p-8 shadow-md rounded-lg max-w-md w-full">
+
+            <!-- Login form -->
+             <form class="space-y-4">
+                <h2 class="text-xl font-semibold">Login</h2>
+                <div>
+                    <label for="username" class="block mb-1 font-medium">Username</label>
+                    <input type="text" id="username" name="username" placeholder="Enter your username..." class="w-full p-2 border rounded">
+                </div>
+                <div>
+                    <label for="password" class="block mb-1 font-medium">Password</label>
+                    <input type="password" id="password" name="password" placeholder="Enter your password..." class="w-full p-2 border rounded">
+                </div>
+                <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Login</button>
+             </form>
+
+        </div>
+    </div>
 </body>
 </html>
