--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Signup</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 font-sans antialised">
@@ -18,22 +18,35 @@
         </div>
     </nav> 
 
+    <br>
     <!-- Main content -->
     <div class="flex items-center justify-center h-screen">
         <div class="bg-white p-8 shadow-md rounded-lg max-w-md w-full">
 
             <!-- Login form -->
              <form class="space-y-4">
-                <h2 class="text-xl font-semibold">Login</h2>
+                <h2 class="text-xl font-semibold">Signup</h2>
                 <div>
                     <label for="username" class="block mb-1 font-medium">Username</label>
                     <input type="text" id="username" name="username" placeholder="Enter your username..." class="w-full p-2 border rounded">
                 </div>
+
+                <div>
+                    <label for="email" class="block mb-1 font-medium">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Enter your email..." class="w-full p-2 border rounded">
+                </div>
+
                 <div>
                     <label for="password" class="block mb-1 font-medium">Password</label>
                     <input type="password" id="password" name="password" placeholder="Enter your password..." class="w-full p-2 border rounded">
                 </div>
-                <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Login</button>
+            
+                <div>
+                    <label for="repeatPassword" class="block mb-1 font-medium">Repeat Password</label>
+                    <input type="password" id="repeatPassword" name="repeatPassword" placeholder="Repeat your password..." class="w-full p-2 border rounded">
+                </div>
+
+                <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700">Signup</button>
              </form>
 
         </div>
